fix item locking